src/app/styles/style.scss
@import './_partials/_vars.scss';
@import './_partials/_defaults.scss';
@import './_partials/_flexbox.scss';
@import './_partials/_mixins.scss';
@import './_partials/_menu.scss';

.social {
	.icon {
		display: inline-block;
		width: 1.8em;
		height: 1.8em;
		fill: $text;
		margin-right: 1em;
		transition: fill .2s ease-in-out;
	}
}

.icon-twitter:hover {
	fill: #55acee;
}

.icon-github:hover {
	fill: #000;
}

.icon-linkedin:hover {
	fill: #0077B5;
}

.more-btn {
	display: flex;
	justify-content: center;
}

.btn {
	font-family: Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
	font-weight: 400;
	padding: .45em 1em;
	border-radius: 50px;
	transition: all .3s ease-out;
	letter-spacing: .015em;
	display: flex;
	align-items: center;

	.icon {
		fill: $white;
		transform: none!important;
	}

	&-social {
		width: 4em;
		height: 4em;
		padding: 0;
		margin: 0 auto;

		.icon {
			margin: 0 auto;
			padding: 0;
		}
	}

	&-red {
		background-color: $accent;
		color: $white;

		&:hover, &-raised {
			box-shadow: 0 .5em 1.5em rgba(255, 82, 82, .45);
		}

		&:active {
			background-color: #FF6363;
			transition: .1s;
		}
	}

	&-blue {
		background-color: #00B0FF;
		color: $white;

		&:hover {
			box-shadow: 0 .5em 1.5em rgba(0, 176, 255, .45);
		}
	}

	&-secondary {
		background-color: $text;
		color: $white;

		&:hover {
			box-shadow: 0 .25em 1em rgba(55, 71, 79, .45);
		}
	}
}

.btn.btn-large {
	padding: .55em 1.5em;
	margin: 1.5em 0;

	.icon {
		width: 1.5em;
		height: 1.5em;
	}
}

.site-header {
	color: $text;
	background: $white;
	padding: 5em;
	text-align: center;
	position: relative;
	overflow: hidden;

	.icon {
		padding: .5em;
		fill: $text;
		transition: fill .2s ease-in-out;
	}

	.btn-large {
		font-size: 1.15em;
	}
}

.job {
	font-weight: 400;
}

.buttons {
	display: flex;
	justify-content: center;
}

.my-name, .heart {
	color: $accent;
}

.aboutme {
	background-color: $sectionHighlight;
	color: $text;

	h1 {
		padding: 0;
	}
}

.getintouch {
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding-top: .75em;
	flex-wrap: wrap;
}

.name {
	font-size: 2.75em;
}

.avatar {
	width: 385px;
	margin-bottom: -55px;
}

.github {
	background-color: $white;
	color: $text;
}

.icon-github {
	width: 1.5em;
	height: 1.5em;
}

.icon-star, .icon-fork {
	width: 1.15em;
	height: 1.15em;
	padding: 0 .25em 0 0;
}

.github-repo {
	display: flex;
}

.repo {
	padding: 60px 40px;
	border-radius: 2px;
	border-top: 3px solid;
	border-top-color: $textLight;
	transition: all .3s ease-out;
	flex: 1;
	box-shadow: 0 1px 2px rgba(0, 0, 0, .15);

	&:hover {
		box-shadow: 0 15px 30px rgba(0, 0, 0, .15);
	}

	&-title {
		display: flex;
		justify-content: space-between;
		align-items: center;
		margin-bottom: .5em;

		h4 {
			color: $text;
			transition: color .2s ease-out;
			margin: 0;

			&:hover {
				color: $textHover;
			}
		}
	}

	&-stats {
		display: flex;
		align-items: center;
		margin-top: .75em;
		margin-bottom: .75em;
	}

	&-description {
		font-weight: 300;
		font-size: 1.05em;
	}

}

@each $tag, $color in ('javascript': $javascript, 'html': $html, 'css': $css) {
	@include createLanguageCard($tag, $color);
}

.icon-fork {
	margin-left: .35em;
}

.starred, .forked, .web {
    display: flex;
	align-items: center;
}

.stars {
	color: $stars;
}

.icon-arrow {
	width: 1.25em;
	height: 1.25em;
	margin-left: .35em;
	transition: all .15s ease-out;
	fill: #00B0FF;
}

.forks {
	color: $text;
}

.icon-star {
	fill: $stars;
}

.icon-globe {
	fill: $web;
	width: 1.35em!important;
	height: 1.35em!important;
}

.icon-fork {
	fill: $text;
}

.icon-star, .icon-fork, .web {
	transition: all .2s ease-out;

	&:hover {
		transform: scale(1.25);
	}

	&:active {
		transform: scale(.95);
	}
}

.twitter {
	display: flex;
	background-color: #F1F6F8;
	color: $text;
	justify-content: center;

	.icon {
		width: 1.5em;
		height: 1.5em;
		transition: all .2s ease-out;

		&:hover {
			transform: scale(1.25);
		}

		&:active {
			transform: scale(.95);
		}
	}
}

.tweet {
	background-color: $white;
	box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
	border-radius: 2px;
	transition: all .3s ease-out;
	overflow: hidden;
	text-align: center;
	max-width: 468px;
	margin-right: auto;
	margin-left: auto;

	&-username {
		font-weight: 400;
		margin-bottom: 0;
	}

	&-card {
		display: flex;
	}

	&:hover {
		box-shadow: 0 10px 20px rgba(0, 0, 0, .15);
	}

	&-wrap {
		padding: 3em 1.5em 0;
	}

	&-text {
		font-weight: 300;
		padding: 1.5em 1em;
	}

	&-details {
		padding: .75em 0;
		background-color: #00B0FF;
		color: #fff;

		a {
			color: #fff;
		}
	}

	&-username {
		font-size: 1.25em;
		font-weight: 700;
	}

	&-actions {
		border-top: 1px solid #eee;

		a {
			margin: .5em;
			margin: .75em .5em;
		}
	}

	&-img {
		width: 100%;
		height: 30vh;
		background-size: cover;
		background-repeat: no-repeat;
		background-position: 50% 50%;
	}
}

.tweet-actions, .tweet-actions a {
	display: flex;
	align-items: center;
	justify-content: center;
}

.icon-heart {
	fill: #E81C4F;
}

.likes {
	color: #E81C4F;
}

.icon-reply {
	fill: $web;
}

.icon-retweet {
	fill: #19CF86;
}

.rts {
	color: #19CF86;
}

.blog time {
	font-size: .75em;
	color: $textLight;
	text-transform: uppercase;
	font-weight: 400;
	margin-right: 1em;
}

.post-wrap {
	display: flex;
}

.post {
	padding: 0;
	transition: all .3s ease-out;
	border-radius: 2px;
	margin: 2.75em 0;
	overflow: hidden;
	box-shadow: 0 1px 4px rgba(0, 0, 0, .15);

	header {
		width: 100%;
	}

	&:hover {
		box-shadow: 0 15px 45px rgba(0, 0, 0, .15);
	}

	&-info {
		display: flex;
	    flex-wrap: wrap;
	    margin-top: .45em;
	    align-items: center;
	}

	&-excerpt {
		margin-bottom: 0;
	}

	&-content {
		padding: 2.5em;
		display: flex;
		align-items: center;
		flex-wrap: wrap;
	}

	&-footer {
		background: #fff;
		padding: 1em 2.5em;
		border-top: 1px #eee solid;
	}

	&-image {
		width: 100%;
	}

	&-title {
		font-size: 1.35em;
		font-weight: 600;
		line-height: 1.15;

		a {
			color: $text;
			transition: color .2s ease-out;

			&:hover {
				color: $textHover;
			}
		}
	}

	&-tag {
		&:hover::before {
			visibility: visible;
			-webkit-transform: scaleX(1);
			transform: scaleX(1);
		}

		&:before {
			content: "";
			position: absolute;
			width: 100%;
			height: 2px;
			bottom: 0;
			left: 0;
			visibility: hidden;
			-webkit-transform: scaleX(0);
			transform: scaleX(0);
			-webkit-transition: all .2s ease-in-out 0s;
			transition: all .2s ease-in-out 0s;
		}
	}


	&-tags {

		a {
			padding: 0 .25em .25em .25em;
			font-size: .75em;
			text-transform: uppercase;
			margin-right: .85em;
			position: relative;
			text-decoration: none;
		}

		@each $tag, $color in ('personal': $personal, 'life': $life, 'javascript': $javascript, 'html': $html, 'css': $css, 'nodejs': $nodejs, 'npm': $npm, 'tools': $tools) {
			@include createTag($tag, $color);
		}
	}
}

.read-more {
	display: flex;
	align-items: center;
	transition: all .3s ease-out;
	color: #00B0FF;

	&:hover {
		color: #76d4ff;
		.icon-arrow {
			margin-left: .85em;
			fill: #76d4ff;
		}
	}
}

.section-title, .section-subtitle {
	text-align: center;
	font-weight: 400;
}

.section-subtitle {
	font-weight: 300;
	color: $textHover;
}

footer {
	color: $text;
	background-color: $sectionHighlight;
	padding: 3em 1.5em;
	text-align: left;

	.social {
		text-align: right;
	}

	h3 {
		font-weight: 700;
		color: $text;
	}
}

.footer-navigation {
	padding: 0;
	margin: 0;

	li {
		display: inline-block;
		padding-right: .95em;
		font-size: .75em;
		text-transform: uppercase;
	}
}

.tweet, .repo {
	margin: 2em 0;
}

@media (max-width: 768px) {
	.site-header {
		padding: 5em 1.5em 5em 1.5em;
	}

	.salute {
		display: block;
	}

	.site-header h1 {
		font-size: 3.25em;
	}

	.job {
		font-size: 2em;
	}

	section h1 {
		padding: 0 1em;
	}

	.c-hamburger--htx {
	    right: 20px;
    	top: 15px;
	}

	.c-hamburger {
		width: 40px;
		height: 40px;
	}

	.c-hamburger span {
	    left: 0;
    	right: 0;
		height: 3px;
		top: 22px;

		&::after, &::before {
			height: 3px;
		}

		&::before {
			top: -15px;
		}

		&::after {
			bottom: -15px;
		}
	}

	.github .repo {
		height: 115px;
		padding: 40px 20px!important;
	}

	footer {
		padding: 1.5em .5em;
	}

	footer, footer .social {
		text-align: center;
	}

	.avatar {
		padding-top: 1em;
	}
}

@media (max-width: 468px) {
	section h1, .tweet, .repo, .post {
		padding: 0!important;
	}

	.site-header h1 {
		font-size: 2.75em;
	}

	.name {
		font-size: 2.5em;
	}

	.job {
		font-size: 1.75em;
	}

	html, body {
		font-size: 15px;
	}

	.social {
		margin-top: 1.5em;
	}

	.avatar {
		margin-bottom: -50px;
		width: 100%;
	}
}

